<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="ar.com.webnoa.consultaenconsultorio.ConfiguracionActivity"
    android:padding="10dp">


    <EditText
        android:id="@+id/nombreTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/cuitTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/cuit"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/nroPrestadorTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/nroPrestador"
        android:inputType="textPersonName" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@android:color/holo_red_dark"
        android:text="@string/guardar"
        android:textColor="@android:color/background_light" />

</LinearLayout>
