<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">


        <TextView
            android:id="@+id/textoFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/fecha"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textoID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textSize="1sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelTx"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textoNroTx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textoNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nroAfiliadoHit"
            android:textColor="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/textoNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombre"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/textoReferencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textSize="1sp"/>


    </LinearLayout>

</LinearLayout>