<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="ar.com.webnoa.consultaenconsultorio.PrestacionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/nroAfiliadoTxt"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:digits="0123456789"
            android:ems="10"
            android:hint="@string/nroAfiliadoHit"
            android:inputType="phone"
            android:maxLength="11"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/cdsTxt"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/cdsHit"
            android:inputType="number|numberPassword"
            android:maxLength="3" />


    </LinearLayout>

    <Button
        android:id="@+id/validarBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/botonValidar"
        android:textColor="@android:color/background_light" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/AvisoTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ResultadoTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>